--- a/styles.css
+++ b/styles.css
@@ -33,25 +33,31 @@ body{
 
 #paraTrilha{
     display: none;
-    position: fixed;
-    left: 30px;
-    top: 30px;
-    color: white;
+    color: #ffffffb6;
     background: transparent;
-    font-size: 40px;
+    font-size: 30px;
     border: none;
     cursor: pointer;
+    background: #ffffff33;
+    backdrop-filter: blur(30px);
+    border-radius: 50%;
+    border: 1px solid #ffffffb6;
+    padding: 5px 10px;
+    margin: 0 auto;
 }
 
 #ativarTrilha {
-    position: fixed;
-    left: 30px;
-    top: 30px;
-    color: white;
+    color: #ffffffb6;
     background: transparent;
-    font-size: 40px;
+    font-size: 30px;
     border: none;
     cursor: pointer;
+    background: #ffffff33;
+    backdrop-filter: blur(30px);
+    border-radius: 50%;
+    border: 1px solid #ffffffb6;
+    padding: 5px 10px;
+    margin: 0 auto;
 }
 
 #preloader {
@@ -179,9 +185,10 @@ body{
 
 #dia, #noite{
     pointer-events: all;
-    background: #8f8f8f;
+    background: #ffffff50;
+    backdrop-filter: blur(20px);
     cursor: pointer;
-    color: #000000;
+    color: white;
     border-radius: 5px;
     padding: 5px 20px;
     border: none;
@@ -248,12 +255,16 @@ body{
 
 .car-shop{
     position: absolute;
-    top: 30px;
+    top: 20px;
     right: 20px;
-    color: white;
-    font-size: 30px;
+    color: #ffffffcc;
+    background: #ffffff2f;
+    font-size: 18px;
     cursor: pointer;
     z-index: 80;
+    border: 1px solid #ffffffcc;
+    border-radius: 50%;
+    padding: 12px 5px;
 }
 
 .iphones{
@@ -498,4 +509,149 @@ body{
     display: flex;
     justify-content: center;
     color: white;
+}
+
+.arrumarConfig {
+    cursor: pointer;
+    position: absolute;
+    display: block;
+    width: 50px;
+    left: 0;
+    top: 30px;
+    background:white;
+    z-index: 30;
+    border-radius: 0 10px 10px 0;
+}
+
+.arrumarConfig img {
+    width: 40px;
+    animation: rodar 4s linear infinite;
+}
+
+@keyframes rodar {
+    0% {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.desabilitar {
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    padding: 20px;
+    animation: aparecerConfig .3s linear;
+    margin-bottom: 20px;
+}
+
+.desabilitar h3 {
+    text-align: center;
+    width: 100%;
+    color: #ffffffd3;
+    font-size: 17px;
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+}
+
+.desabilitar button {
+    border-radius: 5px;
+    width: 80%;
+    padding: 10px;
+    background: #303030;
+    color: white;
+    border: none;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: 10px 10px 10px #0000006c;
+}
+
+.habilitar {
+    display: none;
+    width: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    padding: 20px;
+    animation: aparecerConfig .3s linear;
+    margin-bottom: 20px;
+}
+
+.habilitar h3 {
+    text-align: center;
+    width: 100%;
+    color: #ffffffd3;
+    font-size: 17px;
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+}
+
+.habilitar button {
+    border-radius: 5px;
+    width: 80%;
+    padding: 10px;
+    background: #303030;
+    color: white;
+    border: none;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: 10px 10px 10px #0000006c;
+}
+
+.display {
+    pointer-events: all;
+    z-index: 999999;
+    cursor: pointer;
+}
+
+.config {
+    display: none;
+    width: 300px;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    top: 30px;
+    background: #222222a1;
+    backdrop-filter: blur(30px);
+    padding: 30px 20px 20px 20px;
+    border-radius: 0 10px 10px 0;
+    animation: aparecerConfig .3s linear;
+}
+
+.config.ativo {
+    display: flex;
+}
+
+@keyframes aparecerConfig {
+    0% {
+        transform: translateX(-300px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.som{
+    text-align: center;
+    width: 100%;
+}
+
+.som h3{
+    width: 100%;
+    color: white;
+    font-size: 17px;
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
