--- a/styles.css
+++ b/styles.css
@@ -61,94 +61,41 @@ body{
 }
 
 #preloader {
-    pointer-events: none;
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #242424;
-    z-index: 99999;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
 }
 
-.loader .title {
-    color: white;
-    font-size: 14px;
-    letter-spacing: 2px;
-    font-weight: lighter;
-    text-align: center;
-    font-family: arial;
-}
-
-.loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-}
-
-/*Loader Pin*/
-.loader-pin {
-    width: 50px;
-    height: 50px;
-    display: block;
-    margin-bottom: 40px;
-    box-sizing: border-box;
-    position: relative;
-    margin-left: 25px;
-}
-
-.loader-pin::after {
-    content: '';
-    box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    left: 0;
-    bottom: 0;
-    position: absolute;
-    border-radius: 50% 50% 0;
-    border: 12px solid #d91616;
-    background-color: #b50000;
-    transform: rotate(45deg) translate(0, 0);
-    box-sizing: border-box;
-    animation: animMarker 0.4s ease-in-out infinite alternate;
-}
-
-.loader-pin::before {
-
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 150%;
-    width: 24px;
-    height: 4px;
+#loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
     border-radius: 50%;
-    background: rgba(0, 0, 0, 0.2);
-    animation: animShadow 0.4s ease-in-out infinite alternate;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
 }
 
-@keyframes animMarker {
+@keyframes spin {
     0% {
-        transform: rotate(45deg) translate(5px, 5px);
+        transform: rotate(0deg);
     }
 
     100% {
-        transform: rotate(45deg) translate(-5px, -5px);
+        transform: rotate(360deg);
     }
 }
 
-@keyframes animShadow {
-    0% {
-        transform: scale(0.5);
-    }
-
-    100% {
-        transform: scale(1.1);
-    }
+#percentage {
+    margin-top: 20px;
+    font-size: 24px;
 }
 
 #joystick {
