--- a/styles.css
+++ b/styles.css
@@ -66,12 +66,13 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #080808;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     z-index: 9999;
+    color: white;
 }
 
 #loader {
