--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ body{
     backdrop-filter: blur(30px);
     border-radius: 50%;
     overflow: hidden;
-    z-index: 9999;
+    z-index: 1;
 }
 
 #stick {
@@ -136,7 +136,7 @@ body{
     font-size: 15px;
     padding: 8px 20px;
     border-radius: 10px;
-    background: linear-gradient(45deg, #4CAF50, #556270);
+    background: #337535;
     color: white;
     border: none;
     box-shadow: 0px 5px 10px #00000033;
@@ -255,7 +255,7 @@ body{
     position: fixed;
     bottom: 30px;
     padding-bottom: 20px;
-    z-index: 9;
+    z-index: 99999;
 }
 
 .fechar{
@@ -264,10 +264,11 @@ body{
     color: #ffffffd7;
     border: 2px solid #ffffffbd;
     background: red;
-    padding: 10px 13px;
+    padding: 10px 17px;
     border-radius: 50%;
     font-weight: bold;
     cursor: pointer;
+    font-size: 25px;
 }
 
 .Comprados {
@@ -392,6 +393,7 @@ body{
     display: none;
     width: 90%;
     height: 90vh;
+    z-index: 9999;
 }
 
 .pratosProntos.ativo, .legumes.ativo, .bebidas.ativo{
@@ -617,6 +619,7 @@ body{
 .som{
     text-align: center;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .som h3{
@@ -626,4 +629,253 @@ body{
     border-bottom: 1px solid white;
     padding-bottom: 10px;
     margin-bottom: 10px;
+}
+
+.fullscren{
+    text-align: center;
+    width: 100%;
+}
+
+.fullscren h3 {
+    width: 100%;
+    color: white;
+    font-size: 17px;
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.fullscren button{
+    border-radius: 5px;
+    width: 80%;
+    padding: 10px;
+    background: #303030;
+    color: white;
+    border: none;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: 10px 10px 10px #0000006c;
+}
+
+#contact-form {
+    margin-top: 40px;
+    width: 100%;
+}
+
+.input-box {
+    display: flex;
+}
+
+.input-field {
+    width: 50%;
+    margin-right: 50px;
+}
+
+.input-field:last-child {
+    margin-right: 0;
+}
+
+.input-field input {
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid #ffffff31;
+    outline: none;
+    padding: 10px;
+    margin-bottom: 30px;
+    background: transparent;
+    color: white;
+    transition: .4s;
+    font-size: 20px;
+}
+
+.textarea-field {
+    margin: 0 auto;
+    width: 47%;
+}
+
+.textarea-field textarea {
+    width: 100%;
+    height: 150px;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #ffffff31;
+    padding: 10px;
+    outline: none;
+    color: white;
+    margin-bottom: 10px;
+    transition: .4s;
+    font-size: 20px;
+}
+
+.btn button {
+    margin: 10px auto;
+    position: relative;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    width: 100px;
+    color: white;
+    border: 1px solid #ffffff31;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.btn button:hover {
+    border: 1px solid transparent;
+}
+
+.btn .logo-enviar {
+    position: absolute;
+    opacity: 0;
+    transition: .3s;
+}
+
+.btn .texto {
+    position: absolute;
+    transition: .3s;
+    opacity: 1;
+}
+
+.btn button:hover .texto {
+    opacity: 0;
+}
+
+.btn button:hover .logo-enviar {
+    opacity: 1;
+    font-size: 20px;
+    color: #ffffff9f;
+}
+
+@media(max-width: 1100px) {
+    .btnfechar{
+        height: 80px;
+        justify-content: end;
+        top: 40px;
+        padding-right: 70px; 
+    }
+}
+
+@media(max-width: 950px) {
+    #iphone, #ipad, #Mac{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 768px) {
+
+    #iphone,
+    #ipad,
+    #Mac {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 20px;
+    }
+
+    #item-card img {
+        width: 200px;
+        height: 150px;
+    }
+
+    .Comprados.ativo{
+        width: 100%;
+        z-index: 997;
+    }
+
+    .car-shop{
+        top: 30px;
+        z-index: 999;
+    }
+
+    .totalItens{
+        width: 100%;
+    }
+
+    .lista{
+        position: relative;
+        width: 100%;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .lista img{
+        height: 70px;
+    }
+
+    .lista .listaNome{
+        width: 100px;
+        text-align: center;
+        margin-left: 40px;
+        font-size: 14px;
+    }
+
+    .btns{
+        margin-top: 5px;
+        margin-left: 40px;
+    }
+
+    .precoItem{
+        margin-top: 10px;
+        margin-left: 15px;
+    }
+
+    #table-body{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+    }
+}
+
+@media(max-width: 560px) {
+    #item-card img{
+        width: 150px;
+        height: 150px;
+    }
+
+    #item-price {
+        font-size: 14px;
+    }
+
+    .pratosProntos, .legumes, .bebidas{
+        border-radius: 0;
+        padding: 10px;
+        width: 100%;
+        height: 100vh;
+    }
+
+    #item-card {
+        margin: 10px auto 40px;
+        background: #353535;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #item-name{
+        font-size: 17px;
+    }
+
+    .btnfechar{
+        top: 10px;
+        padding-right: 10px; 
+    }
+
+    .input-field input {
+        font-size: 17px;
+    }
+
+    .textarea-field { 
+        width: 100%;
+    }
+
+    .textarea-field textarea{
+        font-size: 17px;
+        
+    }
 }
